wordpress/tcs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcs
spec:
  ports:
    - name: http
      port: 80
  selector:
    role: tcs
